# SPTRSV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.py
app/: main.cpp
cmake/: FindMKL.cmake  FindOpenCL.cmake
code/: .gitignore  Makefile  basiccl.cpp  basiccl.h  common.h  core.cpp  core.h  kernel_full2.cl  main.cpp  sptrsv_syncfree2_opencl.cpp  sptrsv_syncfree3_opencl.cpp  sptrsv_syncfree_opencl.cpp  sptrsv_syncfree_opencl.h  sptrsv_syncfree_serialref.cpp  sptrsv_syncfree_serialref.h  utils.cpp  utils.h
doc/: SPTRSV.pptx  romanov_research.docx
include/: basiccl.h  common.h  core.h  sptrsv_syncfree2_opencl.h  sptrsv_syncfree_opencl.h  sptrsv_syncfree_serialref.h  utils.h
matrices/: .gitignore
matrices/txt/: csr_5_upper.txt  csr_6_upper.txt  csr_6_upper_snodes.txt
src/: CMakeLists.txt  basiccl.cpp  core.cpp  kernel_full.cl  kernel_full2.cl  kernel_full3.cl  sptrsv_syncfree2_opencl.cpp  sptrsv_syncfree3_opencl.cpp  sptrsv_syncfree_opencl.cpp  sptrsv_syncfree_serialref.cpp  utils.cpp
test/: test_sptrsv.cpp
